# small-model-chatbot

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
