[project]
name = "small-model-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.31.0",
    "huggingface-hub[hf-xet]>=0.31.4",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
